[package]
name = "mmc-api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.7.0"
actix-web = "4.5.1"
console-subscriber = "0.2.0"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
surrealdb = { version = "1.2.0", features = ["kv-mem"] }
tokio = { version = "1.36.0", features = ["full"] }
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.18", features = ["tracing", "env-filter"] }
uuid = "1.7.0"
validate = "0.6.1"
validator = { version = "0.16.1", features = ["derive"] }


# [build]
# rustflags = ["--cfg", "tokio_unstable"]