[package]
name = "nexus"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.7.0"
actix-web = "4.5.1"
chrono = "0.4.34"
dotenvy = "0.15.7"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
sha2 = "0.10.8"
surrealdb = { version = "1.2.0", features = ["kv-mem"] }
tokio = { version = "1.36.0", features = ["full"] }
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.18", features = ["tracing", "env-filter"] }
uuid = "1.7.0"
validator = { version = "0.16.1", features = ["derive"] }




# [build]
# rustflags = [
#     "--cfg" ,"tokio_unstable"
# ]

